--- a/DQD/App.xaml
+++ b/DQD/App.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DQD.Net"
-    RequestedTheme="Dark">
+    RequestedTheme="Light">
 
     <Application.Resources>
         <ResourceDictionary>
