--- a/DQD/MainPage.xaml
+++ b/DQD/MainPage.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DQD.Net"
-    xmlns:TC="using:DQD.Core.Controls"
+    xmlns:MPV="using:DQD.Core.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
@@ -12,50 +12,59 @@
 
     </Page.Resources>
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    <Grid Background="{StaticResource DQDBackground}">
         <Grid.ColumnDefinitions>
-            <ColumnDefinition/>
             <ColumnDefinition Width="auto"/>
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Grid>
+        <Grid Width="500" SizeChanged="Grid_SizeChanged">
             <TextBlock Text="懂球帝" 
-                               Height=" 50" 
-                               FontSize="30" 
-                               VerticalAlignment="Top"/>
-            <Pivot Name="RootPivot" 
-                           Margin="0,50,0,0" 
-                           Background="Aquamarine"
-                           SelectionChanged="RootPivot_SelectionChanged"
-                           Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}">
+                       Height=" 50" 
+                       FontSize="24" 
+                       Margin=" 15,10,0,5"
+                       VerticalAlignment="Top"
+                       Foreground="{StaticResource AppPersonalTextColorPure}"/>
+            <MPV:PersonalPivot Name="RootPivot" 
+                               Margin="0,50,0,0" 
+                               Background="{ThemeResource AppPersonalExtraBackground}"
+                               SelectionChanged="RootPivot_SelectionChanged"
+                               IndicatorLineStroke="{StaticResource DQDBackground}" 
+                               BackgroundLineStoke="{StaticResource AppPersonalExtraBackground02}"
+                               IndicatorLineStokeThickness="5"
+                               Style="{ThemeResource BottemPV}"
+                               Width="{Binding ActualWidth, ElementName=grid, Mode=OneWay}">
+                <Pivot.HeaderTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding}" 
+                                   x:Name="HeaderPanel"
+                                   Margin="0,0,0,5" 
+                                   TextAlignment="Center" 
+                                   Width="{Binding ElementName=RootPivot, Path=HeaderWidth}" 
+                                   Foreground="{StaticResource AppPersonalTextColorPure02}"
+                                   FontSize="20"/>
+                    </DataTemplate>
+                </Pivot.HeaderTemplate>
                 <PivotItem Name="HomePItem" 
-                                   Background="White" >
-                    <PivotItem.Header>
-                        <TC:TabHeader Label="首页" Glyph="&#xE719;"/>
-                    </PivotItem.Header>
+                           Header="首页"
+                           Background="White" >
                     <Frame Name="HomePFrame"/>
                 </PivotItem>
                 <PivotItem Name="MatchPItem" 
-                                   Background="SteelBlue">
-                    <PivotItem.Header >
-                        <TC:TabHeader Label="比赛" Glyph="&#xE719;"/>
-                    </PivotItem.Header>
+                           Header="比赛"
+                           Background="SteelBlue">
                     <Frame Name="MatchPFrame"/>
                 </PivotItem>
                 <PivotItem Name="VideoPItem" 
-                                   Background="Black">
-                    <PivotItem.Header>
-                        <TC:TabHeader Label="视频" Glyph="&#xE719;"/>
-                    </PivotItem.Header>
+                           Header="视频"
+                           Background="Black">
                     <Frame Name="VideoPFrame"/>
                 </PivotItem>
                 <PivotItem Name="DataPItem" 
-                                   Background="Pink">
-                    <PivotItem.Header>
-                        <TC:TabHeader Label="数据" Glyph="&#xE719;"/>
-                    </PivotItem.Header>
+                           Header="数据"
+                           Background="Pink">
                     <Frame Name="DataPFrame"/>
                 </PivotItem>
-            </Pivot>
+            </MPV:PersonalPivot>
         </Grid>
 
         <Frame Name="ContentFrame" 
