--- a/DQD/Pages/HomePage.xaml
+++ b/DQD/Pages/HomePage.xaml
@@ -3,11 +3,164 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DQD.Net.Pages"
+    xmlns:model="using:DQD.Core.Models"
+    xmlns:MPV="using:DQD.Core.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="home" FontSize="50"/>
+    <Page.Resources>
+        <CollectionViewSource x:Name="ListResources"/>
+    </Page.Resources>
+
+    <Grid x:Name="grid" Background="{ThemeResource AppPersonalExtraBackground02}">
+        <MPV:PersonalPivot x:Name="MyPivot" 
+                           IndicatorLineStroke="{StaticResource DQDBackground}" 
+                           IndicatorLineStokeThickness="2"
+                           BackgroundLineStoke="{StaticResource AppPersonalExtraBackground02}">
+            <Pivot.HeaderTemplate>
+                <DataTemplate>
+                    <TextBlock Text="{Binding}"
+                               Margin="0,0,0,5" 
+                               TextAlignment="Center" 
+                               FontSize="16"
+                               Width="40"
+                               Foreground="{StaticResource AppPersonalTextColorPure02}"/>
+                </DataTemplate>
+            </Pivot.HeaderTemplate>
+            <PivotItem Header="头条" Margin="0" Background="Transparent">
+                <ListView Name="TTListView" 
+                  ItemsSource="{Binding Source={StaticResource ListResources}}"
+                  ItemContainerStyle="{ThemeResource SpecialListViewItemExpanded}"
+                  SelectionMode="None" 
+                  IsItemClickEnabled="True"
+                  ItemClick="ListView_ItemClick"
+                  ContainerContentChanging="ContainerContentChanging">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="model:HomeListModel">
+                            <Grid HorizontalAlignment="Stretch">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="2*"/>
+                                    <ColumnDefinition Width="5*"/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="{Binding Title}" 
+                                   Grid.Row="0" 
+                                   Grid.Column="1"
+                                   Margin="3"
+                                   TextWrapping="WrapWholeWords"/>
+                                <TextBlock Text="{Binding Date}" 
+                                   Grid.Row="1" 
+                                   Grid.Column="1"
+                                   Margin="3"/>
+                                <Image Source="{Binding Image}" 
+                               Grid.Column="0"
+                               Grid.RowSpan="2" 
+                               Margin="5"/>
+                                <Button Content="{Binding ShareNum}" 
+                                Grid.RowSpan="2" 
+                                Grid.Column="2"/>
+                                <TextBlock Name="idx" 
+                                   Foreground="White"
+                                   Visibility="Collapsed"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </PivotItem>
+            <PivotItem Header="集锦" Margin="0" Background="Transparent" >
+                <ListView Name="JJListView" 
+                  ItemsSource="{Binding Source={StaticResource ListResources}}"
+                  ItemContainerStyle="{ThemeResource SpecialListViewItemExpanded}"
+                  SelectionMode="None" 
+                  IsItemClickEnabled="True"
+                  ItemClick="ListView_ItemClick"
+                  ContainerContentChanging="ContainerContentChanging">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="model:HomeListModel">
+                            <Grid HorizontalAlignment="Stretch">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="2*"/>
+                                    <ColumnDefinition Width="5*"/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="{Binding Title}" 
+                                   Grid.Row="0" 
+                                   Grid.Column="1"
+                                   Margin="3"
+                                   TextWrapping="WrapWholeWords"/>
+                                <TextBlock Text="{Binding Date}" 
+                                   Grid.Row="1" 
+                                   Grid.Column="1"
+                                   Margin="3"/>
+                                <Image Source="{Binding Image}" 
+                               Grid.Column="0"
+                               Grid.RowSpan="2" 
+                               Margin="5"/>
+                                <Button Content="{Binding ShareNum}" 
+                                Grid.RowSpan="2" 
+                                Grid.Column="2"/>
+                                <TextBlock Name="idx" 
+                                   Foreground="White"
+                                   Visibility="Collapsed"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </PivotItem>
+            <PivotItem Header="中超" Margin="0" Background="Transparent">
+                <ListView Name="ZCListView" 
+                  ItemsSource="{Binding Source={StaticResource ListResources}}"
+                  ItemContainerStyle="{ThemeResource SpecialListViewItemExpanded}"
+                  SelectionMode="None" 
+                  IsItemClickEnabled="True"
+                  ItemClick="ListView_ItemClick"
+                  ContainerContentChanging="ContainerContentChanging">
+                    <ListView.ItemTemplate>
+                        <DataTemplate x:DataType="model:HomeListModel">
+                            <Grid HorizontalAlignment="Stretch">
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="2*"/>
+                                    <ColumnDefinition Width="5*"/>
+                                    <ColumnDefinition/>
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition/>
+                                    <RowDefinition/>
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="{Binding Title}" 
+                                   Grid.Row="0" 
+                                   Grid.Column="1"
+                                   Margin="3"
+                                   TextWrapping="WrapWholeWords"/>
+                                <TextBlock Text="{Binding Date}" 
+                                   Grid.Row="1" 
+                                   Grid.Column="1"
+                                   Margin="3"/>
+                                <Image Source="{Binding Image}" 
+                               Grid.Column="0"
+                               Grid.RowSpan="2" 
+                               Margin="5"/>
+                                <Button Content="{Binding ShareNum}" 
+                                Grid.RowSpan="2" 
+                                Grid.Column="2"/>
+                                <TextBlock Name="idx" 
+                                   Foreground="White"
+                                   Visibility="Collapsed"/>
+                            </Grid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+            </PivotItem>
+        </MPV:PersonalPivot>
+        
     </Grid>
 </Page>
