--- a/DQD/Pages/MatchPage.xaml
+++ b/DQD/Pages/MatchPage.xaml
@@ -3,11 +3,25 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:DQD.Net.Pages"
+    xmlns:MPV="using:DQD.Core.Controls"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <TextBlock Text="match" FontSize="50"/>
+        <Grid Background="White">
+            <MPV:PersonalPivot x:Name="MyPivot" 
+                               IndicatorLineStroke="Red" 
+                               IndicatorLineStokeThickness="2">
+                <Pivot.HeaderTemplate>
+                    <DataTemplate>
+                        <TextBlock Text="{Binding}" Margin="0,0,0,5" Foreground="Black" TextAlignment="Center" Width="{Binding ElementName=MyPivot, Path=HeaderWidth}" FontSize="16"></TextBlock>
+                    </DataTemplate>
+                </Pivot.HeaderTemplate>
+                <PivotItem Header="推荐" Margin="0" Background="Aqua"></PivotItem>
+                <PivotItem Header="热门" Margin="0" Background="AliceBlue" ></PivotItem>
+                <PivotItem Header="收藏" Margin="0" Background="Beige"></PivotItem>
+            </MPV:PersonalPivot>
+        </Grid>
     </Grid>
 </Page>
