--- a/DQD/Pages/MatchPage.xaml
+++ b/DQD/Pages/MatchPage.xaml
@@ -9,19 +9,6 @@
     mc:Ignorable="d">
 
     <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-        <Grid Background="White">
-            <MPV:PersonalPivot x:Name="MyPivot" 
-                               IndicatorLineStroke="Red" 
-                               IndicatorLineStokeThickness="2">
-                <Pivot.HeaderTemplate>
-                    <DataTemplate>
-                        <TextBlock Text="{Binding}" Margin="0,0,0,5" Foreground="Black" TextAlignment="Center" Width="{Binding ElementName=MyPivot, Path=HeaderWidth}" FontSize="16"></TextBlock>
-                    </DataTemplate>
-                </Pivot.HeaderTemplate>
-                <PivotItem Header="推荐" Margin="0" Background="Aqua"></PivotItem>
-                <PivotItem Header="热门" Margin="0" Background="AliceBlue" ></PivotItem>
-                <PivotItem Header="收藏" Margin="0" Background="Beige"></PivotItem>
-            </MPV:PersonalPivot>
-        </Grid>
+        <TextBlock Text="Match" FontSize="50"/>
     </Grid>
 </Page>
