--- a/DQD/Pages/HomePage.xaml
+++ b/DQD/Pages/HomePage.xaml
@@ -11,155 +11,77 @@
 
     <Page.Resources>
         <CollectionViewSource x:Name="ListResources"/>
+        <CollectionViewSource x:Name="HeaderResources"/>
     </Page.Resources>
 
     <Grid x:Name="grid" Background="{ThemeResource AppPersonalExtraBackground02}">
         <MPV:PersonalPivot x:Name="MyPivot" 
-                           IndicatorLineStroke="{StaticResource DQDBackground}" 
+                           IndicatorLineStroke="{ThemeResource DQDBackground}" 
                            IndicatorLineStokeThickness="2"
-                           BackgroundLineStoke="{StaticResource AppPersonalExtraBackground02}">
+                           BackgroundLineStoke="{ThemeResource AppPersonalExtraBackground02}"
+                           ItemsSource="{Binding Source={StaticResource HeaderResources}}"
+                           SelectionChanged="MyPivot_SelectionChanged">
             <Pivot.HeaderTemplate>
-                <DataTemplate>
-                    <TextBlock Text="{Binding}"
+                <DataTemplate x:DataType="model:HeaderModel">
+                    <TextBlock Text="{Binding Title}"
                                Margin="0,0,0,5" 
                                TextAlignment="Center" 
                                FontSize="16"
-                               Width="40"
-                               Foreground="{StaticResource AppPersonalTextColorPure02}"/>
+                               Width="55"
+                               Foreground="{ThemeResource AppPersonalTextColorPure02}"/>
                 </DataTemplate>
             </Pivot.HeaderTemplate>
-            <PivotItem Header="头条" Margin="0" Background="Transparent">
-                <ListView Name="TTListView" 
-                  ItemsSource="{Binding Source={StaticResource ListResources}}"
-                  ItemContainerStyle="{ThemeResource SpecialListViewItemExpanded}"
-                  SelectionMode="None" 
-                  IsItemClickEnabled="True"
-                  ItemClick="ListView_ItemClick"
-                  ContainerContentChanging="ContainerContentChanging">
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="model:HomeListModel">
-                            <Grid HorizontalAlignment="Stretch">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="2*"/>
-                                    <ColumnDefinition Width="5*"/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                </Grid.RowDefinitions>
-                                <TextBlock Text="{Binding Title}" 
-                                   Grid.Row="0" 
-                                   Grid.Column="1"
-                                   Margin="3"
-                                   TextWrapping="WrapWholeWords"/>
-                                <TextBlock Text="{Binding Date}" 
-                                   Grid.Row="1" 
-                                   Grid.Column="1"
-                                   Margin="3"/>
-                                <Image Source="{Binding Image}" 
-                               Grid.Column="0"
-                               Grid.RowSpan="2" 
-                               Margin="5"/>
-                                <Button Content="{Binding ShareNum}" 
-                                Grid.RowSpan="2" 
-                                Grid.Column="2"/>
-                                <TextBlock Name="idx" 
-                                   Foreground="White"
-                                   Visibility="Collapsed"/>
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </PivotItem>
-            <PivotItem Header="集锦" Margin="0" Background="Transparent" >
-                <ListView Name="JJListView" 
-                  ItemsSource="{Binding Source={StaticResource ListResources}}"
-                  ItemContainerStyle="{ThemeResource SpecialListViewItemExpanded}"
-                  SelectionMode="None" 
-                  IsItemClickEnabled="True"
-                  ItemClick="ListView_ItemClick"
-                  ContainerContentChanging="ContainerContentChanging">
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="model:HomeListModel">
-                            <Grid HorizontalAlignment="Stretch">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="2*"/>
-                                    <ColumnDefinition Width="5*"/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                </Grid.RowDefinitions>
-                                <TextBlock Text="{Binding Title}" 
-                                   Grid.Row="0" 
-                                   Grid.Column="1"
-                                   Margin="3"
-                                   TextWrapping="WrapWholeWords"/>
-                                <TextBlock Text="{Binding Date}" 
-                                   Grid.Row="1" 
-                                   Grid.Column="1"
-                                   Margin="3"/>
-                                <Image Source="{Binding Image}" 
-                               Grid.Column="0"
-                               Grid.RowSpan="2" 
-                               Margin="5"/>
-                                <Button Content="{Binding ShareNum}" 
-                                Grid.RowSpan="2" 
-                                Grid.Column="2"/>
-                                <TextBlock Name="idx" 
-                                   Foreground="White"
-                                   Visibility="Collapsed"/>
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </PivotItem>
-            <PivotItem Header="中超" Margin="0" Background="Transparent">
-                <ListView Name="ZCListView" 
-                  ItemsSource="{Binding Source={StaticResource ListResources}}"
-                  ItemContainerStyle="{ThemeResource SpecialListViewItemExpanded}"
-                  SelectionMode="None" 
-                  IsItemClickEnabled="True"
-                  ItemClick="ListView_ItemClick"
-                  ContainerContentChanging="ContainerContentChanging">
-                    <ListView.ItemTemplate>
-                        <DataTemplate x:DataType="model:HomeListModel">
-                            <Grid HorizontalAlignment="Stretch">
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="2*"/>
-                                    <ColumnDefinition Width="5*"/>
-                                    <ColumnDefinition/>
-                                </Grid.ColumnDefinitions>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition/>
-                                    <RowDefinition/>
-                                </Grid.RowDefinitions>
-                                <TextBlock Text="{Binding Title}" 
-                                   Grid.Row="0" 
-                                   Grid.Column="1"
-                                   Margin="3"
-                                   TextWrapping="WrapWholeWords"/>
-                                <TextBlock Text="{Binding Date}" 
-                                   Grid.Row="1" 
-                                   Grid.Column="1"
-                                   Margin="3"/>
-                                <Image Source="{Binding Image}" 
-                               Grid.Column="0"
-                               Grid.RowSpan="2" 
-                               Margin="5"/>
-                                <Button Content="{Binding ShareNum}" 
-                                Grid.RowSpan="2" 
-                                Grid.Column="2"/>
-                                <TextBlock Name="idx" 
-                                   Foreground="White"
-                                   Visibility="Collapsed"/>
-                            </Grid>
-                        </DataTemplate>
-                    </ListView.ItemTemplate>
-                </ListView>
-            </PivotItem>
+            <MPV:PersonalPivot.ItemTemplate>
+                <DataTemplate x:DataType="model:HeaderModel" >
+                    <Border Name="Header">
+                        <ListView x:Name="ContentListView" 
+                                  ItemsSource="{Binding Source={StaticResource ListResources}}"
+                                  ItemContainerStyle="{ThemeResource SpecialListViewItemExpanded}"
+                                  SelectionMode="None" 
+                                  IsItemClickEnabled="True"
+                                  ItemClick="ListView_ItemClick"
+                                  ContainerContentChanging="ContainerContentChanging"
+                                  Loaded="LocalPageListView_Loaded">
+                            <ListView.ItemTemplate>
+                                <DataTemplate x:DataType="model:ContentListModel">
+                                    <Grid HorizontalAlignment="Stretch">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="2*"/>
+                                            <ColumnDefinition Width="5*"/>
+                                            <ColumnDefinition/>
+                                        </Grid.ColumnDefinitions>
+                                        <Grid.RowDefinitions>
+                                            <RowDefinition/>
+                                            <RowDefinition/>
+                                        </Grid.RowDefinitions>
+                                        <TextBlock Text="{Binding Title}" 
+                                                   Grid.Row="0" 
+                                                   Grid.Column="1"
+                                                   Margin="3"
+                                                   TextWrapping="WrapWholeWords"/>
+                                        <TextBlock Text="{Binding Date}" 
+                                                   Grid.Row="1" 
+                                                   Grid.Column="1"
+                                                   Margin="3"/>
+                                        <Image Source="{Binding Image}" 
+                                               Grid.Column="0"
+                                               Grid.RowSpan="2" 
+                                               Margin="5"/>
+                                        <Button Content="{Binding ShareNum}" 
+                                                Grid.RowSpan="2" 
+                                                Grid.Column="2"
+                                                Background="Transparent"
+                                                Foreground="{ThemeResource DQDBackground}"/>
+                                        <TextBlock Name="idx" 
+                                                   Foreground="White"
+                                                   Visibility="Collapsed"/>
+                                    </Grid>
+                                </DataTemplate>
+                            </ListView.ItemTemplate>
+                        </ListView>
+                    </Border>
+                </DataTemplate>
+            </MPV:PersonalPivot.ItemTemplate>
         </MPV:PersonalPivot>
         
     </Grid>
