--- a/DQD/MainPage.xaml
+++ b/DQD/MainPage.xaml
@@ -80,7 +80,7 @@
         </Grid>
 
         <Frame Name="ContentFrame" 
-               Margin="5,-10,0,0"
+               Margin="5,0,0,0"
                Background="{ThemeResource AppPersonalExtraBackground}"
                Grid.Column="1"/>
     </Grid>
