--- a/DQD/MainPage.xaml
+++ b/DQD/MainPage.xaml
@@ -12,12 +12,16 @@
 
     </Page.Resources>
 
-    <Grid Background="{ThemeResource DQDBackground}">
+    <Grid Background="{ThemeResource DQDBackground}"
+          SizeChanged="grid_SizeChanged">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="auto"/>
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
-        <Grid Width="500" SizeChanged="Grid_SizeChanged">
+        <Grid Width="500" 
+              Name="BaseGrid"
+              Margin="0,0,2,0"
+              SizeChanged="BaseGrid_SizeChanged">
             <TextBlock Text="懂球帝" 
                        Height=" 60" 
                        FontSize="24" 
@@ -79,9 +83,24 @@
             </MPV:PersonalPivot>
         </Grid>
 
+        <Image Source="/Assets/38565-105.jpg"
+               Grid.Column="1"
+               Stretch="UniformToFill"/>
+        <StackPanel Orientation="Vertical" 
+                    Grid.Column="1"
+                    HorizontalAlignment="Right"
+                    VerticalAlignment="Bottom"
+                    FlowDirection="RightToLeft"
+                    Margin="15">
+            <TextBlock Text="懂球帝"
+                       FontSize="28"
+                       Foreground="#C0C0C0"/>
+            <TextBlock Text="为足球而生"
+                       FontSize="14"
+                       Foreground="#C0C0C0"/>
+        </StackPanel>
+
         <Frame Name="ContentFrame" 
-               Margin="5,0,0,0"
-               Background="{ThemeResource AppPersonalExtraBackground}"
                Grid.Column="1"/>
     </Grid>
 </Page>
