--- a/DQD/Pages/ContentPage.xaml
+++ b/DQD/Pages/ContentPage.xaml
@@ -9,18 +9,36 @@
 
     <Grid Background="{ThemeResource AppPersonalExtraBackground}">
         <Border Background="{ThemeResource DQDBackground}"
-                Height="70"
+                Height="60"
                 VerticalAlignment="Top">
             <TextBlock Name="ContentTitle"
-                       FontSize="30"
+                       FontSize="27"
+                       Margin="5,2,0,2"
                        HorizontalAlignment="Left"
-                       VerticalAlignment="Center"/>
+                       VerticalAlignment="Center"
+                       Foreground="{ThemeResource AppPersonalTextColorPure}"/>
         </Border>
         <Border Background="{ThemeResource AppPersonalExtraBackground}"
-                Margin="0,70,0,0">
-            <!--<TextBlock Name="PageContent" TextWrapping="WrapWholeWords"/>-->
+                Margin="0,60,0,0">
             <ScrollViewer>
-                <StackPanel Name="ContentStack" Margin=" 5"/>
+                <StackPanel >
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Name="ContentAuthor" 
+                                   Foreground="{ThemeResource DQDSummTextColor}"
+                                   FontSize="12"
+                                   FontWeight="Thin"
+                                   Margin="5"/>
+                        <TextBlock Name="ContentDate" 
+                                   Foreground="{ThemeResource DQDSummTextColor}"
+                                   FontSize="12"
+                                   FontWeight="Thin"
+                                   Margin="5"/>
+                    </StackPanel>
+                    <Rectangle Height="1" 
+                               Margin="5,0,5,0"
+                               Fill="{ThemeResource BorderTicknessColor01}"/>
+                    <StackPanel Name="ContentStack" Margin="5,5,5,0"/>
+                </StackPanel>
             </ScrollViewer>
         </Border>
 
