--- a/DQD/Pages/HomePage.xaml
+++ b/DQD/Pages/HomePage.xaml
@@ -15,12 +15,9 @@
     </Page.Resources>
 
     <Grid x:Name="grid" Background="{ThemeResource AppPersonalExtraBackground02}">
-        <MPV:PersonalPivot x:Name="MyPivot" 
-                           IndicatorLineStroke="{ThemeResource DQDBackground}" 
-                           IndicatorLineStokeThickness="2"
-                           BackgroundLineStoke="{ThemeResource AppPersonalExtraBackground02}"
-                           ItemsSource="{Binding Source={StaticResource HeaderResources}}"
-                           SelectionChanged="MyPivot_SelectionChanged">
+        <Pivot Name="MyPivot" 
+               ItemsSource="{Binding Source={StaticResource HeaderResources}}"
+               SelectionChanged="MyPivot_SelectionChanged">
             <Pivot.HeaderTemplate>
                 <DataTemplate x:DataType="model:HeaderModel">
                     <TextBlock Text="{Binding Title}"
@@ -31,58 +28,56 @@
                                Foreground="{ThemeResource AppPersonalTextColorPure02}"/>
                 </DataTemplate>
             </Pivot.HeaderTemplate>
-            <MPV:PersonalPivot.ItemTemplate>
+            <Pivot.ItemTemplate>
                 <DataTemplate x:DataType="model:HeaderModel" >
-                    <Border Name="Header">
-                        <ListView x:Name="ContentListView" 
-                                  ItemsSource="{Binding Source={StaticResource ListResources}}"
-                                  ItemContainerStyle="{ThemeResource SpecialListViewItemExpanded}"
-                                  SelectionMode="None" 
-                                  IsItemClickEnabled="True"
-                                  ItemClick="ListView_ItemClick"
-                                  ContainerContentChanging="ContainerContentChanging"
-                                  Loaded="LocalPageListView_Loaded">
-                            <ListView.ItemTemplate>
-                                <DataTemplate x:DataType="model:ContentListModel">
-                                    <Grid HorizontalAlignment="Stretch">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="2*"/>
-                                            <ColumnDefinition Width="5*"/>
-                                            <ColumnDefinition/>
-                                        </Grid.ColumnDefinitions>
-                                        <Grid.RowDefinitions>
-                                            <RowDefinition/>
-                                            <RowDefinition/>
-                                        </Grid.RowDefinitions>
-                                        <TextBlock Text="{Binding Title}" 
+                    <ListView x:Name="ContentListView" 
+                              ItemsSource="{Binding Source={StaticResource ListResources}}"
+                              ItemContainerStyle="{ThemeResource SpecialListViewItemExpanded}"
+                              SelectionMode="None" 
+                              IsItemClickEnabled="True"
+                              ItemClick="ListView_ItemClick"
+                              ContainerContentChanging="ContainerContentChanging"
+                              Loaded="LocalPageListView_Loaded">
+                        <ListView.ItemTemplate>
+                            <DataTemplate x:DataType="model:ContentListModel">
+                                <Grid HorizontalAlignment="Stretch">
+                                    <Grid.ColumnDefinitions>
+                                        <ColumnDefinition Width="2*"/>
+                                        <ColumnDefinition Width="5*"/>
+                                        <ColumnDefinition/>
+                                    </Grid.ColumnDefinitions>
+                                    <Grid.RowDefinitions>
+                                        <RowDefinition/>
+                                        <RowDefinition/>
+                                    </Grid.RowDefinitions>
+                                    <TextBlock Text="{Binding Title}" 
                                                    Grid.Row="0" 
                                                    Grid.Column="1"
                                                    Margin="3"
                                                    TextWrapping="WrapWholeWords"/>
-                                        <TextBlock Text="{Binding Date}" 
+                                    <TextBlock Text="{Binding Date}" 
                                                    Grid.Row="1" 
                                                    Grid.Column="1"
                                                    Margin="3"/>
-                                        <Image Source="{Binding Image}" 
+                                    <Image Source="{Binding Image}" 
                                                Grid.Column="0"
                                                Grid.RowSpan="2" 
                                                Margin="5"/>
-                                        <Button Content="{Binding ShareNum}" 
+                                    <Button Content="{Binding ShareNum}" 
                                                 Grid.RowSpan="2" 
                                                 Grid.Column="2"
                                                 Background="Transparent"
                                                 Foreground="{ThemeResource DQDBackground}"/>
-                                        <TextBlock Name="idx" 
+                                    <TextBlock Name="idx" 
                                                    Foreground="White"
                                                    Visibility="Collapsed"/>
-                                    </Grid>
-                                </DataTemplate>
-                            </ListView.ItemTemplate>
-                        </ListView>
-                    </Border>
+                                </Grid>
+                            </DataTemplate>
+                        </ListView.ItemTemplate>
+                    </ListView>
                 </DataTemplate>
-            </MPV:PersonalPivot.ItemTemplate>
-        </MPV:PersonalPivot>
+            </Pivot.ItemTemplate>
+        </Pivot>
         
     </Grid>
 </Page>
