--- a/DQD.Core/Controls/ToastSmooth.xaml
+++ b/DQD.Core/Controls/ToastSmooth.xaml
@@ -42,7 +42,7 @@
                        RelativePanel.AlignTopWithPanel="True"
                        RelativePanel.AlignLeftWithPanel="True"
                        RelativePanel.AlignRightWithPanel="True"
-                       Fill="{ThemeResource AppPersonalMusicBarBackground}"  />
+                       Fill="{ThemeResource DQDBackground}"  />
             <TextBlock x:Name="tbNotify" TextWrapping="WrapWholeWords" Foreground="White" 
                        Margin="20,15" TextAlignment="Center" />
          
